[package]
name = "suitesparse_sys"
version = "0.1.0"
description = "Rust FFI bindings for SuiteSparse"
license = "BSD-3-Clause"
repository = "https://github.com/rwl/suitesparse_sys"
edition = "2021"

[build-dependencies]
bindgen = "0.68"
cc = "1"

[features]
dynamic = []
cxsparse = []
ldl = []
amd = []
klu = []
cholmod = []
umfpack = []
